# StreamerWinui

./: .gitignore  README.md  StreamerWinui.sln
ConsoleApp/: ConsoleApp.csproj  Program.cs
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
Dll/: Dll.vcxproj  Source.c
DllCpp/: DllCpp.vcxproj
StreamerLib/: AudioBufferSlicer.cs  AudioEncoder.cs  AudioRecorder.cs  Buffer.cs  FFmpegImport.cs  FFmpegImportLegacy.cs  LibUtil.cs  LoggingHelper.cs  MasterChannel.cs  Modules.cs  Program.cs  StreamController.cs  StreamSession.cs  StreamWriter.cs  Streamer.cs  StreamerLib.csproj  WasapiAudioCapturingChannel.cs
StreamerWinui/: App.xaml  App.xaml.cs  AudioRecorder.cs  AudioWindow.xaml  AudioWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Modules.cs  Package.appxmanifest  StreamSession.cs  Streamer.cs  StreamerWinui.csproj  Structs.cs  SystemBackdropController.cs  Test.cs  WindowsSystemDispatcherQueueHelper.cs  app.manifest
StreamerWinui.Tests/: StreamSessionTest.cs  StreamerWinui.Tests.csproj
Tests/: AudioCapturer.cs  AudioRecorder.cs  MasterChannel.cs  Modules.cs  Program.cs  StreamSession.cs  Streamer.cs  Structs.cs  Tests.csproj
Win2DTest/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Win2DTest.csproj  app.manifest
WpfApp/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp.csproj
libutil/libutil/: Cargo.toml  build.ps1
libutil/libutil/src/: audio_capturing_channel.rs  audio_encoder.rs  audio_frame.rs  audio_packet.rs  lib.rs  master_channel.rs  qpc_time.rs  stream_controller.rs  stream_writer.rs  wave_format.rs
(+22 files in other folders)
