[package]
name = "libutil"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libutil"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
cpal = "0.15.2"
ffmpeg = { path = "../ffmpeg" }
#wasapi = "0.12.0"
