[package]
name = "libutil"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libutil"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
ffmpeg = { path = "../ffmpeg" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_Properties",
    "Win32_System_Performance",
]